# mate-rov-2026-iceberg-depth

./: .gitignore  README.md  build.sh  install_prereqs.py  install_prereqs.sh  run_model.sh  run_normal.sh  run_receiver.sh
src/iceberg_depth/: CMakeLists.txt
src/iceberg_depth/examples/: measure_distance_v1.cpp  measure_distance_v2.cpp  measure_distance_v3.cpp  measure_distance_v4.cpp
underwater_calibration/: E.npy  F.npy  K_left.npy  K_right.npy  P1.npy  P2.npy  Q.npy  R.npy  R1.npy  R2.npy  T.npy  dist_left.npy  dist_right.npy  left_map1.npy  left_map2.npy  right_map1.npy  right_map2.npy  roi1.npy  roi2.npy
